<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/label_days"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/monday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tuesday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wednesday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thursday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/friday" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/saturday" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weeks_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>